deleted hitboxShapes asking from the server

--- a/ownFramework/exampleHtml.html
+++ b/ownFramework/exampleHtml.html
@@ -8,9 +8,8 @@
     <script src="../cdn_modules/jquery@3.6.0/jquery.min.js" ></script>
     
     
-    <script src="hitboxesShapes.js"></script>
     <script src="canvasShapes.js"></script>
-    <script src="BasicObject.js"></script>
+    <script src="basicObject.js"></script>
     <script src="basicObjectComponents.js"></script>
     <script src="framework.js"></script>
     <script src="frameworkHandler.js"></script>
