working kinematicBody, accidently wrote gravity (patially)

--- a/ownFramework/exampleHtml.html
+++ b/ownFramework/exampleHtml.html
@@ -29,7 +29,7 @@
     
     <script src="mainTester.js"></script>
     
-    <script>NoNameFramework.onLoad();</script>
+    <script>fw.onLoad();</script>
 </body>
 
 </html>
