not working hitboxes, mb revert to recent

--- a/ownFramework/exampleHtml.html
+++ b/ownFramework/exampleHtml.html
@@ -11,6 +11,7 @@
     <script src="frameworkHandler.js"></script>
     <script src="basicObject.js"></script>
     <script src="canvasShapes.js"></script>
+    <script src="colliderShapes.js"></script>
     <script src="basicObjectComponents.js"></script>
     <script src="framework.js"></script>
     
